--- a/api-backend/package.json
+++ b/api-backend/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.7.2",
-    "ml-regression-polynomial": "^2.2.0"
+    "ml-regression-polynomial": "^2.2.0",
+    "mongodb": "^4.2.2",
+    "stripe": "^8.194.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
